--- a/optimizacion-de-talento.ipynb
+++ b/optimizacion-de-talento.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 201,
    "id": "5c35b4c2",
    "metadata": {},
    "outputs": [],
@@ -26,6 +26,14 @@
     "\n",
     "# Para poder visualizar todas las columnas de los DataFrames\n",
     "pd.set_option('display.max_columns', None) \n",
+    "\n",
+    "# Trabajar con el sistema operativo y variables de entorno\n",
+    "import os \n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# Conexión con MySQL\n",
+    "import mysql.connector\n",
+    "from mysql.connector import Error\n",
     "\n",
     "# Gestión de los warnings\n",
     "import warnings\n",
@@ -2698,6 +2706,48 @@
     "df_final.to_csv('./datasets/df_final.csv', index=False)\n",
     "print(\"✅ Guardados:\")\n",
     "print(\"- df_final.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6be8dbf9",
+   "metadata": {},
+   "source": [
+    "# Conexión MySQL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "id": "4a805513",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conexión exitosa\n"
+     ]
+    }
+   ],
+   "source": [
+    "load_dotenv() #carga las variables del entorno .env; devuelve un true o false\n",
+    "#MySQL\n",
+    "MYSQL_HOST = os.getenv(\"MYSQL_HOST\")\n",
+    "MYSQL_USER = os.getenv(\"MYSQL_USER\")\n",
+    "MYSQL_PASSWORD = os.getenv(\"MYSQL_PASSWORD\")\n",
+    "\n",
+    "# CONEXION PAYTHON-MYSQL\n",
+    "try:\n",
+    "    cnx = mysql.connector.connect(\n",
+    "        host= MYSQL_HOST,\n",
+    "        user= MYSQL_USER,\n",
+    "        password= MYSQL_PASSWORD,\n",
+    "        database=\"musicstream_db\"\n",
+    "    )\n",
+    "    print('Conexión exitosa')\n",
+    "except Error as e:\n",
+    "    print('Error al conectar:', e)"
    ]
   }
  ],
