--- a/optimizacion-de-talento.ipynb
+++ b/optimizacion-de-talento.ipynb
@@ -2824,6 +2824,48 @@
     "    print(\"Error al insertar los datos:\", e)\n",
     "    cnx.rollback() # revertir petición en caso de error"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5728370",
+   "metadata": {},
+   "source": [
+    "# Visualización"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5913243",
+   "metadata": {},
+   "source": [
+    "- Correlacion tiempo sin promoción con años en la empresa\n",
+    "- años empresa con satisfaccion\n",
+    "- nivel estudios con rol\n",
+    "- ingresos con estudios\n",
+    "- ingresos con la satisfaccion empresa\n",
+    "- ingresos con rol\n",
+    "- ingresos con antigüedad\n",
+    "- satisfacción con años de mismo manager\n",
+    "- ingreso con overtime\n",
+    "- nivel impliacion con satisfaccion\n",
+    "- genero con promocion\n",
+    "- satisfacción con equilibro vida laboral/personal\n",
+    "- promocion con formaciones recibidas\n",
+    "- nivel jerarquico con nivel de viajes\n",
+    "- numero empresas con salario\n",
+    "- distancia con satisfaccion\n",
+    "- genero con nivel jerarquico del puesto\n",
+    "- genero con porcentaje incremento salarial\n",
+    "- porcentaje incremento salarial con promociones o rol\n",
+    "- area estudio con salario\n",
+    "- edad con nivel jerarquico\n",
+    "- edad con tarifa mensual estimada\n",
+    "- edad con numero empresas\n",
+    "- genero con departamento\n",
+    "- edad con incremento salarial\n",
+    "- edad con estado civil\n",
+    "- estado civil con años en rol actual"
+   ]
   }
  ],
  "metadata": {
