--- a/optimizacion-de-talento.ipynb
+++ b/optimizacion-de-talento.ipynb
@@ -4294,6 +4294,30 @@
     "\n",
     "Recomendación: Focalizar los planes de sucesión para los puestos de máximo nivel en las mujeres que se encuentran actualmente en el tramo de 16-20 años, para cerrar la brecha histórica detectada en el segmento de más de 20 años de antigüedad.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "005722d9",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15d1b3c2",
+   "metadata": {},
+   "source": [
+    "#### ANALISIS 4: Equilibrio vida personal/laboral\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4238e1ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
