--- a/optimizacion-de-talento-final.ipynb
+++ b/optimizacion-de-talento-final.ipynb
@@ -4682,7 +4682,7 @@
    "id": "ae19440c",
    "metadata": {},
    "source": [
-    "Relación entre número de empresas y salario"
+    "### Relación entre número de empresas y salario"
    ]
   },
   {
@@ -5191,11 +5191,12 @@
     "- **Zona de Riesgo (Burnout)**: Se observa un número significativo de empleados con **Very High Involvement** pero con satisfacción **Low** o **Medium**. Estos son los \"mártires\" de la empresa; empleados que trabajan con mucha intensidad pero que no están contentos, lo que los convierte en los candidatos principales a sufrir estrés o abandono inminente.\n",
     "- **La \"Zona de Confort\"**: Existe un pequeño grupo con satisfacción **Very High** pero implicación **Low**. Estos empleados están muy felices en la empresa pero su nivel de esfuerzo es mínimo, lo que podría indicar falta de retos o un exceso de acomodación.\n",
     "\n",
-    "* Conclusión Profesional:\n",
+    "\n",
+    "**Conclusión Profesional:** \n",
     "\n",
     "La organización goza de una buena salud emocional general, ya que los cuadrantes de mayor densidad coinciden con niveles altos de ambas variables. Sin embargo, la gestión del talento debe poner el foco en el desequilibrio entre el esfuerzo y la recompensa percibida. Un empleado muy implicado que no está satisfecho es una bomba de relojería para la cultura de equipo; su descontento puede ser contagioso precisamente porque son los que más trabajan.\n",
     "\n",
-    "* Recomendaciones Estratégicas para RRHH:\n",
+    "**Recomendaciones Estratégicas para RRHH**:\n",
     "\n",
     "- **Programas de Reconocimiento para el \"Grupo Crítico\"**: Para los empleados con alta implicación y baja satisfacción, RRHH debe revisar de inmediato sus cargas de trabajo y ofrecerles reconocimiento público o incentivos, para que su esfuerzo se vea compensado y su satisfacción suba.\n",
     "- **Enriquecimiento de Tareas (Job Enrichment)**: Para aquellos que están muy satisfechos pero poco implicados, se recomienda asignarles nuevos proyectos o responsabilidades que \"despierten\" su compromiso y eviten que caigan en la desidia.\n",
@@ -5262,25 +5263,18 @@
    "source": [
     "#### Conclusión:\n",
     "\n",
-    "Este análisis es crucial para entender cómo el factor geográfico y los tiempos de desplazamiento afectan la percepción de bienestar (WorkLifeBalance) de los empleados.\n",
+    "**Relación entre Distancia al Hogar y Equilibrio Vida-Trabajo (WLB)**\n",
+    "Este análisis permite identificar si los tiempos de desplazamiento actúan como un factor crítico en el agotamiento del personal. Un equilibrio mantenido a pesar de la distancia sugiere políticas de transporte o flexibilidad efectivas.\n",
     "\n",
-    "Puntualizaciones Máximas: Se observan picos de satisfacción máxima (3.0) tanto en empleados que viven muy cerca (11 km) como en algunos que viven a distancias considerables (28 km).\n",
+    "**Distancias Cortas (1-5 km):** 2.75 (aprox.)\n",
     "\n",
-    "Tendencia de Satisfacción Media: La mayoría de los datos se agrupan entre los niveles 2.6 y 2.9, lo que coincide con la media general de la empresa (2.76) que analizamos previamente.\n",
+    "**Distancias Largas (25-29 km):** 2.65 (aprox.)\n",
     "\n",
-    "Zonas de Riesgo: Se detecta una caída significativa en la satisfacción (nivel 2.5) en el rango de los 26-27 km, lo que podría marcar un \"punto de fatiga\" por desplazamiento.\n",
+    "**Análisis de los resultados:** La visualización tipo mapa de calor revela una resiliencia notable en los niveles de satisfacción. Independientemente de la distancia, la categoría **\"Better\"** predomina consistentemente, alcanzando picos del **75%** y **80%** en distancias como 6 km y 23 km respectivamente. No se observa un deterioro lineal de la satisfacción a medida que aumenta la distancia al hogar, lo que sugiere que otros factores (como la autonomía o el teletrabajo) compensan el impacto negativo de los desplazamientos largos.\n",
     "\n",
-    "* Conclusión Profesional: \n",
-    "\n",
-    "A diferencia de lo que se podría esperar, la distancia al hogar no degrada de forma lineal la satisfacción del empleado. La dispersión de los puntos sugiere que otros factores compensatorios (como la flexibilidad horaria o el teletrabajo) están mitigando el impacto negativo de vivir lejos. No obstante, el descenso en los niveles de satisfacción al superar los 25 km indica que existe un límite físico donde el tiempo de trayecto empieza a pesar más que los beneficios ofrecidos.\n",
-    "\n",
-    "* Recomendaciones Estratégicas para RRHH:\n",
-    "\n",
-    "Políticas de Teletrabajo Selectivas: Para los empleados que se encuentran en el \"rango de riesgo\" (más de 25 km), RRHH debería priorizar modelos de trabajo híbrido con mayor presencialidad opcional para recuperar esos puntos de satisfacción perdidos.\n",
-    "\n",
-    "Ayudas a la Movilidad: Dado que hay empleados que mantienen una satisfacción alta (3.0) viviendo lejos (28 km), se recomienda investigar qué medidas están funcionando con ellos (ayudas de transporte, coches de empresa o flexibilidad de entrada) para replicarlas en el resto del grupo.\n",
-    "\n",
-    "Captación de Talento Local: Para nuevas contrataciones de niveles jerárquicos que requieren presencia física constante, se sugiere priorizar candidatos en el radio de los 10-15 km, donde la estabilidad de la satisfacción es más consistente."
+    "* **Conclusiones Clave para RRHH:**\n",
+    "    * **Impacto Moderado del \"Commute\":** La mayoría de los empleados, incluso en rangos de distancia extrema (25-29 km), mantienen percepciones de equilibrio positivas, con niveles de insatisfacción (\"Bad\") que raramente superan el 10%.\n",
+    "    * **Puntos de Alerta Específicos:** Existen casos atípicos, como a los **27 km**, donde el nivel \"Good\" (55%) supera al \"Better\""
    ]
   },
   {
@@ -5351,24 +5345,19 @@
    "source": [
     "#### Conclusión:\n",
     "\n",
-    "Equilibrio Vida Laboral/Personal (Work-Life Balance)\n",
-    "Este indicador es vital para medir la sostenibilidad del talento a largo plazo. Una puntuación equilibrada entre géneros sugiere una cultura de flexibilidad compartida.\n",
+    "**Equilibrio Vida Laboral/Personal (Work-Life Balance)** Este indicador es vital para medir la sostenibilidad del talento a largo plazo. Una puntuación equilibrada entre géneros sugiere una cultura de flexibilidad compartida.\n",
     "\n",
-    "Mujeres (Female): 2.76 (aprox.)\n",
+    "**Mujeres (Female):** 2.76 (aprox.)\n",
     "\n",
-    "Hombres (Male): 2.76 (aprox.)\n",
+    "**Hombres (Male):** 2.75 (aprox.)\n",
     "\n",
-    "Análisis de los resultados: Al observar la visualización, la paridad es prácticamente matemática. Ambos grupos se sitúan ligeramente por encima de la media de la escala (que es 2.5), indicando que los empleados perciben un nivel de equilibrio satisfactorio. No existen sesgos de género que obliguen a un grupo a sacrificar más su vida personal que el otro para cumplir con sus objetivos profesionales.\n",
+    "**Análisis de los resultados:** Al observar la visualización, la paridad es prácticamente total. Ambos grupos concentran más del **70%** de sus respuestas en las categorías superiores (\"Better\" y \"Best\"). La distribución es casi idéntica: un **62.3%** de las mujeres reporta un nivel \"Better\" frente al **60.8%** de los hombres. Estos datos indican que los empleados perciben un nivel de equilibrio satisfactorio y superior a la media, sin sesgos de género que obliguen a un grupo a sacrificar su vida personal más que el otro.\n",
     "\n",
-    "* Conclusiones Clave para RRHH:\n",
+    "* **Conclusiones Clave para RRHH:**\n",
+    "    * **Políticas de Conciliación Efectivas:** La uniformidad en los datos confirma que las herramientas de conciliación (como horarios flexibles o teletrabajo) están integradas en la cultura de la empresa y son aprovechadas de forma equitativa.\n",
+    "    * **Cultura de Bienestar:** Con solo un **5-6%** de la población en la categoría \"Bad\", la organización muestra un riesgo bajo de burnout generalizado, lo que favorece la retención del talento y el clima laboral positivo.\n",
     "\n",
-    "Políticas de Conciliación Efectivas: La uniformidad en los datos confirma que las herramientas de conciliación (como horarios flexibles o días de trabajo remoto) están disponibles y son utilizadas por igual, sin distinción de género.\n",
-    "\n",
-    "Cultura de Bienestar: Mantener un nivel cercano a 3 en una escala de 4 es un indicador positivo de salud organizacional, lo cual reduce el riesgo de burnout y rotación no deseada.\n",
-    "\n",
-    "* Recomendación: \n",
-    "\n",
-    "Dado que la puntuación es idéntica, la empresa debería utilizar este dato en su Employer Branding para atraer nuevo talento. Se recomienda realizar sesiones de \"focus group\" para identificar si este 2.76 puede elevarse a un 3.0 mediante beneficios específicos (como flexibilidad extra en periodos de alta carga de trabajo) para mantener la competitividad frente a otras empresas del sector."
+    "* **Recomendación:** Dado que la percepción de equilibrio es alta y equitativa, la empresa debe capitalizar este resultado en su **Employer Branding** para atraer talento diverso. Se recomienda realizar sesiones de \"focus group\" cualitativas para identificar qué factores impiden que el segmento \"Good\" (23.1%) escale hacia \"Better\", buscando así elevar la media general hacia el 3.0 y consolidar el bienestar como una ventaja competitiva diferencial."
    ]
   }
  ],
